Task #6188: New AppBarLayout component

--- a/app/src/main/res/layout/activity_manager.xml
+++ b/app/src/main/res/layout/activity_manager.xml
@@ -120,7 +120,6 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
-            android:elevation="@dimen/elevation_high"
             layout="@layout/layout_overquota_alert"
             android:visibility="gone"
             android:layout_alignParentBottom="true"/>
@@ -129,6 +128,8 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:elevation="@dimen/elevation_high"
             layout="@layout/layout_get_pro_account"
             android:visibility="gone" />
     </android.support.design.widget.CoordinatorLayout>
