QA report #5913: [CHAT] Contact name too long on sliding panel and info screen app bar

--- a/app/src/main/res/layout/item_participant_chat_list.xml
+++ b/app/src/main/res/layout/item_participant_chat_list.xml
@@ -62,7 +62,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginLeft="13dp"
         android:textColor="@color/file_list_first_row"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:textSize="16sp"
         android:maxLines="1"
         android:singleLine="true"/>
