--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -52,7 +52,7 @@
         android:textColor="@color/file_list_first_row"
         android:maxLines="1"
         android:singleLine="true"
-        android:ellipsize="middle"
+        android:ellipsize="end"
         android:textSize="16sp"/>
 
     <ImageView
