--- a/app/src/main/res/layout/participant_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/participant_item_bottom_sheet.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/participant_item_bottom_sheet"
     android:layout_width="match_parent"
@@ -64,7 +61,10 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:textColor="@color/name_my_account"
-                    android:textSize="16sp"/>
+                    android:textSize="16sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
 
                 <ImageView
                     android:id="@+id/group_participants_state_circle"
@@ -82,7 +82,10 @@
                     android:textColor="@color/mail_my_account"
                     android:gravity="center_vertical"
                     android:layout_below="@+id/group_participants_chat_name_text"
-                    android:textSize="14sp"/>
+                    android:textSize="14sp"
+                    android:ellipsize="end"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
 
             </RelativeLayout>
 
