--- a/app/src/main/res/layout/item_participant_chat_list.xml
+++ b/app/src/main/res/layout/item_participant_chat_list.xml
@@ -73,10 +73,12 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/participant_list_name"
         android:layout_toRightOf="@id/participant_list_relative_layout_avatar"
+        android:layout_toLeftOf="@id/participant_list_permissions"
         android:layout_marginLeft="13dp"
         android:textSize="14sp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:singleLine="true"
         android:textColor="@color/file_list_second_row" />
 
 </RelativeLayout>
