--- a/app/src/main/res/layout/item_participant_chat_list.xml
+++ b/app/src/main/res/layout/item_participant_chat_list.xml
@@ -58,7 +58,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_toRightOf="@id/participant_list_relative_layout_avatar"
-        android:layout_toLeftOf="@id/participant_list_permissions"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="13dp"
         android:textColor="@color/file_list_first_row"
@@ -67,13 +66,23 @@
         android:maxLines="1"
         android:singleLine="true"/>
 
+    <ImageView
+        android:id="@+id/group_participants_state_circle"
+        android:layout_width="6dp"
+        android:layout_height="6dp"
+        android:layout_alignTop="@id/participant_list_name"
+        android:layout_toRightOf="@id/participant_list_name"
+        android:layout_marginLeft="6dp"
+        android:layout_marginTop="3dp"
+        android:background="@null"
+        android:src="@drawable/circle_status_contact_not_connected" />
+
     <TextView
         android:id="@+id/participant_list_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/participant_list_name"
         android:layout_toRightOf="@id/participant_list_relative_layout_avatar"
-        android:layout_toLeftOf="@id/participant_list_permissions"
         android:layout_marginLeft="13dp"
         android:textSize="14sp"
         android:ellipsize="end"
