--- a/app/src/main/res/layout/participant_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/participant_item_bottom_sheet.xml
@@ -53,7 +53,19 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
+                android:layout_toRightOf="@id/recent_group_participants_chat_list_relative_layout_avatar"
                 android:layout_marginLeft="16dp">
+
+                <ImageView
+                    android:id="@+id/group_participant_list_permissions"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_permissions_full_access"
+                    android:background="@null"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="45dp"
+                    android:layout_marginLeft="12dp"
+                    android:layout_centerVertical="true"/>
 
                 <TextView
                     android:id="@+id/group_participants_chat_name_text"
@@ -72,6 +84,8 @@
                     android:layout_height="6dp"
                     android:layout_alignTop="@id/group_participants_chat_name_text"
                     android:layout_toRightOf="@id/group_participants_chat_name_text"
+                    android:layout_marginLeft="6dp"
+                    android:layout_marginTop="3dp"
                     android:background="@null"
                     android:src="@drawable/circle_status_contact_not_connected" />
 
@@ -80,8 +94,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/mail_my_account"
+                    android:layout_below="@id/group_participants_chat_name_text"
                     android:gravity="center_vertical"
-                    android:layout_below="@+id/group_participants_chat_name_text"
                     android:textSize="14sp"
                     android:ellipsize="end"
                     android:maxLines="1"
@@ -287,6 +301,37 @@
                 android:paddingTop="2dp"
                 android:layout_marginLeft="18dp"
                 android:text="@string/title_properties_chat_leave_chat"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <!--Invite a non-contac-->
+        <LinearLayout
+            android:id="@+id/invite_group_participants_chat_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/invite_group_participants_chat_image"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_add_contact_chat_item"
+                android:visibility="visible" />
+
+            <TextView
+                android:id="@+id/invite_group_participants_chat_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="18dp"
+                android:text="@string/contact_invite"
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
         </LinearLayout>
