--- a/app/src/main/res/layout/content_file_info_activity.xml
+++ b/app/src/main/res/layout/content_file_info_activity.xml
@@ -17,10 +17,15 @@
 
         <!-- AVAILABLE OFFLINE LAYOUT -->
 
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:background="@color/separator_grey" />
+
         <LinearLayout
             android:id="@+id/available_offline_layout"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="56dp"
             android:background="@color/white"
             android:orientation="horizontal" >
 
@@ -30,8 +35,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
                 android:layout_weight="5"
+                android:layout_marginLeft="72dp"
                 android:text="@string/file_properties_available_offline"
-                android:textStyle="bold" />
+                android:textSize="16sp"
+                android:textColor="@color/name_my_account"/>
 
             <android.support.v7.widget.SwitchCompat
                 android:id="@+id/file_properties_switch"
@@ -52,14 +59,15 @@
         <RelativeLayout
             android:id="@+id/file_properties_shared_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="56dp" >
 
             <ImageView
                 android:id="@+id/file_properties_shared_image"
-                style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
                 android:gravity="left"
+                android:layout_marginLeft="16dp"
                 android:src="@drawable/ic_shared_with_grey" />
 
             <TextView
@@ -69,23 +77,27 @@
                 android:layout_centerVertical="true"
                 android:layout_gravity="left|center_vertical"
                 android:layout_toRightOf="@id/file_properties_shared_image"
+                android:layout_marginLeft="30dp"
                 android:text="@string/file_properties_shared_folder_select_contact"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16dp"/>
 
-            <TextView
-                android:id="@+id/file_properties_shared_info"
+            <Button
+                android:id="@+id/file_properties_shared_info_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:textColor="@color/accentColor"
-                android:textStyle="bold" />
+                android:layout_marginRight="12dp"
+                android:background="@android:color/transparent"
+                android:textColor="@color/accentColor" />
         </RelativeLayout>
 
         <View
             android:id="@+id/divider_shared_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/separator_grey" />
 
         <!-- PERMISSIONS LAYOUT -->
@@ -93,23 +105,24 @@
         <RelativeLayout
             android:id="@+id/file_properties_permissions_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="left" >
 
             <ImageView
                 android:id="@+id/file_properties_permissions_image"
-                style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_permissions_grey"
-                android:visibility="invisible" />
+                android:layout_centerVertical="true"
+                android:alpha="0.30"
+                android:layout_marginLeft="16dp" />
 
             <RelativeLayout
                 android:id="@+id/file_properties_child_permissions_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
+                android:layout_gravity="left"
+                android:layout_marginLeft="32dp"
                 android:layout_toRightOf="@id/file_properties_permissions_image" >
 
                 <TextView
@@ -117,14 +130,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_shared_folder_permissions"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
                     android:id="@+id/file_properties_permission_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_permission_label"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account"/>
             </RelativeLayout>
         </RelativeLayout>
 
@@ -133,37 +148,31 @@
         <RelativeLayout
             android:id="@+id/file_properties_owner_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="left">
-
-            <ImageView
-                android:id="@+id/file_properties_owner_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_gravity="left|center_vertical"
-                android:layout_toRightOf="@id/file_properties_owner_image" >
+                android:layout_marginLeft="72dp"
+                android:layout_gravity="left">
 
                 <TextView
                     android:id="@+id/file_properties_owner_label"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_owner"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
                     android:id="@+id/file_properties_owner_info"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_owner_label"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account"/>
             </RelativeLayout>
         </RelativeLayout>
 
@@ -172,21 +181,24 @@
         <RelativeLayout
             android:id="@+id/file_properties_size_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="left" >
 
             <ImageView
                 android:id="@+id/file_properties_size_image"
-                style="@style/dialogActionButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey" />
+                android:layout_marginLeft="16dp"
+                android:layout_centerInParent="true"
+                android:alpha="0.30"
+                android:src="@drawable/info_ic" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="32dp"
                 android:layout_toRightOf="@id/file_properties_size_image" >
 
                 <TextView
@@ -194,15 +206,73 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_info_size_file"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
                     android:id="@+id/file_properties_info_data_size"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_info_menu_size"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account" />
             </RelativeLayout>
+        </RelativeLayout>
+
+        <!-- LINK LAYOUT -->
+
+        <RelativeLayout
+            android:id="@+id/file_properties_link_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/file_properties_public_link_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_alignParentLeft="true"
+                android:layout_marginLeft="16dp"
+                android:alpha="0.30"
+                android:src="@drawable/link_ic"/>
+
+            <RelativeLayout
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_gravity="left"
+                android:layout_marginLeft="32dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:layout_toRightOf="@id/file_properties_public_link_image">
+
+                <TextView
+                    android:id="@+id/file_properties_link_label"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/file_properties_shared_folder_public_link"
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16dp"/>
+
+                <TextView
+                    android:id="@+id/file_properties_link_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/file_properties_link_label"
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account" />
+            </RelativeLayout>
+
+            <Button
+                android:id="@+id/file_properties_link_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:minWidth="0dp"
+                android:layout_marginRight="12dp"
+                android:background="@android:color/transparent"
+                android:textColor="@color/accentColor" />
         </RelativeLayout>
 
         <!-- CONTENT LAYOUT -->
@@ -210,23 +280,15 @@
         <RelativeLayout
             android:id="@+id/file_properties_content_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_height="72dp"
+            android:gravity="left"
             android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/file_properties_public_link_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:src="@drawable/ic_link_grey"
-                android:visibility="invisible"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/file_properties_content_image"
+                android:layout_marginLeft="72dp"
+                android:layout_centerVertical="true"
                 android:gravity="left" >
 
                 <TextView
@@ -234,14 +296,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_info_content"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account"/>
 
                 <TextView
                     android:id="@+id/file_properties_info_data_content"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_info_menu_content"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account"/>
             </RelativeLayout>
         </RelativeLayout>
 
@@ -250,22 +314,15 @@
         <RelativeLayout
             android:id="@+id/file_properties_added_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="72dp"
             android:gravity="left"
             android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/file_properties_added_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/file_properties_added_image"
+                android:layout_marginLeft="72dp"
+                android:layout_centerVertical="true"
                 android:gravity="left" >
 
                 <TextView
@@ -273,14 +330,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_info_added"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account" />
 
                 <TextView
                     android:id="@+id/file_properties_info_data_added"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_info_menu_added"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account" />
             </RelativeLayout>
         </RelativeLayout>
 
@@ -289,22 +348,15 @@
         <RelativeLayout
             android:id="@+id/file_properties_modified_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
+            android:layout_height="72dp"
+            android:gravity="left"
             android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/file_properties_modified_image"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_information_grey"
-                android:visibility="invisible" />
 
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/file_properties_modified_image"
+                android:layout_marginLeft="72dp"
+                android:layout_centerVertical="true"
                 android:gravity="left" >
 
                 <TextView
@@ -312,14 +364,16 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/file_properties_info_modified"
-                    android:textStyle="bold" />
+                    android:textSize="16sp"
+                    android:textColor="@color/name_my_account" />
 
                 <TextView
                     android:id="@+id/file_properties_info_data_modified"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/file_properties_info_menu_modified"
-                    android:textColor="@color/grey_info_menu" />
+                    android:textSize="16sp"
+                    android:textColor="@color/mail_my_account" />
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
