--- a/app/src/main/res/layout/bottom_sheet_contact_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_contact_item.xml
@@ -128,7 +128,7 @@
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_chat_black_24dp"
+            android:src="@drawable/ic_start_chat"
             android:visibility="visible" />
 
         <TextView
