--- a/app/src/main/res/layout/participant_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/participant_item_bottom_sheet.xml
@@ -161,7 +161,7 @@
                 android:paddingBottom="2dp"
                 android:layout_marginLeft="5dp"
                 android:paddingTop="2dp"
-                android:src="@drawable/ic_chat_black_24dp"
+                android:src="@drawable/ic_start_chat"
                 android:tint="@color/black"
                 android:visibility="visible" />
 
