--- a/app/src/main/res/layout/content_chat_contact_properties_activity.xml
+++ b/app/src/main/res/layout/content_chat_contact_properties_activity.xml
@@ -40,6 +40,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="right|center_vertical"
+                android:layout_marginRight="16dp"
                 android:layout_weight="1"
                 android:gravity="right" />
         </LinearLayout>
@@ -56,6 +57,7 @@
             android:id="@+id/chat_contact_properties_messages_sound_layout"
             android:layout_width="match_parent"
             android:layout_height="72dp"
+            android:layout_marginLeft="72dp"
             android:layout_gravity="left|center_vertical"
             android:orientation="vertical">
 
@@ -89,6 +91,7 @@
             android:id="@+id/divider_message_sound_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/separator_grey" />
 
         <!-- CALL RINGTONE LAYOUT -->
@@ -98,6 +101,7 @@
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_gravity="left|center_vertical"
+            android:layout_marginLeft="72dp"
             android:orientation="vertical">
 
             <RelativeLayout
@@ -147,6 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="left|center_vertical"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
                 android:src="@drawable/ic_shared_with_grey" />
 
             <TextView
@@ -155,6 +160,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_gravity="left|center_vertical"
+                android:layout_marginLeft="32dp"
                 android:layout_toRightOf="@id/chat_contact_properties_shared_folder_icon"
                 android:text="@string/incoming_shares_label"
                 android:textColor="@color/name_my_account"
@@ -166,6 +172,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
+                android:minWidth="0dp"
+                android:layout_marginRight="12dp"
                 android:background="@android:color/transparent"
                 android:textColor="@color/accentColor"/>
         </RelativeLayout>
@@ -174,6 +182,7 @@
             android:id="@+id/divider_shared_folder_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/separator_grey" />
 
 
@@ -196,6 +205,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="left|center_vertical"
+                    android:layout_marginLeft="16dp"
                     android:src="@drawable/ic_email_grey" />
             </RelativeLayout>
 
@@ -203,6 +213,7 @@
                 android:id="@+id/chat_contact_properties_share_contact_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="32dp"
                 android:layout_toRightOf="@+id/chat_contact_properties_share_contact_icon_layout"
                 android:layout_centerVertical="true"
                 android:orientation="vertical">
@@ -231,6 +242,7 @@
             android:id="@+id/divider_share_contact_layout"
             android:layout_width="fill_parent"
             android:layout_height="1dp"
+            android:layout_marginLeft="72dp"
             android:background="@color/separator_grey" />
 
         <!-- CLEAR LAYOUT -->
@@ -239,6 +251,7 @@
             android:id="@+id/chat_contact_properties_clear_layout"
             android:layout_width="match_parent"
             android:layout_height="48dp"
+            android:layout_marginLeft="72dp"
             android:orientation="vertical">
 
                 <TextView
