--- a/app/src/main/res/layout/chat_item_bottom_sheet.xml
+++ b/app/src/main/res/layout/chat_item_bottom_sheet.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/chat_item_bottom_sheet"
     android:layout_width="match_parent"
@@ -197,11 +194,10 @@
             style="@style/dialogActionButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:alpha="0.54"
             android:layout_marginLeft="5dp"
             android:paddingBottom="2dp"
             android:paddingTop="2dp"
-            android:src="@drawable/ic_notifications_off_black"
+            android:src="@drawable/mute_ic"
             android:visibility="visible" />
 
         <TextView
