--- a/app/src/main/res/menu/activity_manager.xml
+++ b/app/src/main/res/menu/activity_manager.xml
@@ -92,6 +92,13 @@
 		android:icon="@drawable/ic_action_bar_null" />
 
 	<item
+		android:id="@+id/action_menu_set_status"
+		android:orderInCategory="100"
+		MEGA:showAsAction="never"
+		android:title="@string/set_status_option_label"
+		android:icon="@drawable/ic_action_bar_null" />
+
+	<item
 		android:id="@+id/action_add_contact"
 		android:orderInCategory="100"
 		android:title="@string/menu_add_contact"
