--- a/app/src/main/res/layout/bottom_sheet_contact_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_contact_item.xml
@@ -58,6 +58,17 @@
                 android:textColor="@color/name_my_account"
                 android:textSize="16sp"/>
 
+            <ImageView
+                android:id="@+id/contact_list_drawable_state"
+                android:layout_width="6dp"
+                android:layout_height="6dp"
+                android:layout_alignTop="@id/contact_list_contact_name_text"
+                android:layout_toRightOf="@id/contact_list_contact_name_text"
+                android:layout_marginTop="3dp"
+                android:layout_marginLeft="6dp"
+                android:background="@null"
+                android:src="@drawable/circle_status_contact_not_connected" />
+
             <TextView
                 android:id="@+id/contact_list_contact_mail_text"
                 android:layout_width="wrap_content"
