QA report #5339 - Type font is not roboto in password fields on log in/create account/change pass

--- a/app/src/main/res/layout/activity_pin_lock.xml
+++ b/app/src/main/res/layout/activity_pin_lock.xml
@@ -154,6 +154,8 @@
             android:layout_height="fill_parent"
             android:layout_gravity="center_horizontal"
             android:imeOptions="actionDone"
+            android:textSize="16sp"
+            android:fontFamily="sans-serif"
             android:inputType="textPassword" />
         
     </LinearLayout>
