QA report #6336 - Substitute the actual leave/remove share icon with the new one

--- a/app/src/main/res/layout/bottom_sheet_node_item.xml
+++ b/app/src/main/res/layout/bottom_sheet_node_item.xml
@@ -362,7 +362,7 @@
                     android:layout_marginLeft="5dp"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
-                    android:src="@drawable/ic_ignore"
+                    android:src="@drawable/leave_share_ic"
                     android:visibility="visible" />
 
                 <TextView
