Bug #6347 - Flip animation on multiselection icon do not appears on enable/disable actionMode

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="file_list_second_row">#848484</color>
     <color name="file_list_selected_row">#1A000000</color>
     <color name="new_file_list_selected_row">#0A000000</color>
+    <color name="new_multiselect_color">#1A0ABFA5</color>
     <color name="border_file_properties">#cccccc</color>
     <color name="file_properties_text_available">#666666</color>
     <color name="grey_info_menu">#999999</color>
