--- a/app/src/main/res/menu/file_browser_action.xml
+++ b/app/src/main/res/menu/file_browser_action.xml
@@ -11,7 +11,7 @@
         android:id="@+id/cab_menu_unselect_all"
         android:orderInCategory="100"
         android:title="@string/action_unselect_all"
-        MEGA:showAsAction="never" /> 
+        MEGA:showAsAction="never" />
     
     <item
         android:id="@+id/cab_menu_download"
@@ -22,7 +22,8 @@
     
     <item
         android:id="@+id/cab_menu_share"
-        android:icon="@drawable/ic_menu_download_dark"
+        android:icon="@drawable/ic_share_white"
+        android:tint="@color/white"
         android:orderInCategory="105"
         android:title="@string/context_share_folder"
         android:visible="false"
@@ -59,7 +60,8 @@
     <item
         android:id="@+id/cab_menu_share_link"
         android:orderInCategory="125"
-        android:icon="@drawable/ic_menu_download_link_dark"
+        android:icon="@drawable/link_ic"
+        android:tint="@color/white"
         android:title="@string/context_get_link_menu"
         MEGA:showAsAction="never" />
     
