Qa report #6323 - On Cloud Drive add icons: "share" & "get link" to the app bar when items are selected

--- a/app/src/main/res/menu/file_browser_action.xml
+++ b/app/src/main/res/menu/file_browser_action.xml
@@ -60,7 +60,7 @@
     <item
         android:id="@+id/cab_menu_share_link"
         android:orderInCategory="125"
-        android:icon="@drawable/link_ic"
+        android:icon="@drawable/ic_link_white"
         android:tint="@color/white"
         android:title="@string/context_get_link_menu"
         MEGA:showAsAction="never" />
