--- a/app/src/main/res/layout/activity_file_info.xml
+++ b/app/src/main/res/layout/activity_file_info.xml
@@ -12,6 +12,7 @@
         android:id="@+id/app_bar"
         android:layout_width="match_parent"
         android:layout_height="256dp"
+        android:background="@color/content_text_background"
         android:fitsSystemWindows="true">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -19,8 +20,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:fitsSystemWindows="true"
-                android:background="@color/white"
-                app:contentScrim="@color/white"
+                android:background="@color/content_text_background"
+                app:contentScrim="@color/lollipop_primary_color"
                 app:collapsedTitleTextAppearance="@style/ToolbarTitle"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
@@ -28,16 +29,17 @@
                     android:id="@+id/file_info_icon_layout"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/white"
+                    android:layout_marginLeft="60dp"
+                    android:layout_gravity="center_vertical|left"
+                    android:background="@color/content_text_background"
                     app:layout_collapseMode="parallax"
                     android:fitsSystemWindows="true">
 
                     <ImageView
                         android:id="@+id/file_info_toolbar_icon"
-                        android:layout_width="144dp"
-                        android:layout_height="144dp"
-                        android:layout_gravity="center"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:background="@color/content_text_background"
                         android:adjustViewBounds="true"
                         android:scaleType="fitCenter" />
                 </RelativeLayout>
