--- a/app/src/main/res/menu/file_info_action.xml
+++ b/app/src/main/res/menu/file_info_action.xml
@@ -9,15 +9,20 @@
 
     <item
         android:id="@+id/cab_menu_file_info_share_folder"
+        android:icon="@drawable/ic_share_white"
+        android:tint="@color/white"
         android:orderInCategory="100"
         android:title="@string/context_share_folder"
-        MEGA:showAsAction="never" />
+        android:visible="false"
+        MEGA:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/cab_menu_file_info_get_link"
         android:orderInCategory="100"
+        android:icon="@drawable/ic_link_white"
+        android:tint="@color/white"
         android:title="@string/context_get_link_menu"
-        MEGA:showAsAction="never" />
+        MEGA:showAsAction="ifRoom"  />
 
     <item
         android:id="@+id/cab_menu_file_info_edit_link"
